pushing with broken z-index for fixes

--- a/src/app/base/components/sidebar-pm/sidebar-pm.component.scss
+++ b/src/app/base/components/sidebar-pm/sidebar-pm.component.scss
@@ -43,3 +43,8 @@ ol.list-letters {
 .tooltip {
   z-index:150;
 }
+
+.mat-cell div div div button
+{
+  overflow: visible;
+}
